--- a/home.css
+++ b/home.css
@@ -10,11 +10,21 @@
 
 #citation{
 	position : relative;
-	font-size: 30px;
+	font-size: 22px;
 	font-family: Arial;
 	color: white;
 	width: auto;
-	left : 30%;
-	text-align:left;	
-	background-color : rgba(0,0,0,0.8)
+	left : 20%;
+	width:100%;
+	vertical-align: middle;
+	text-align:left;
+}
+#citation div {
+	width:auto;
+	color:#BBB;
+	font-family:Arial;
+	padding : 10px;
+	display: inline-block;
+	transition : color 0.3s;
+	background-color: rgba(0,0,0,0.8);
 }
